rasn-compiler-tests/tests/snapshots/structured_types__nested_recursion_ping_pong.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n    TypeDescription ::= CHOICE {\n        array [1] IMPLICIT SEQUENCE {\n            elementType [2] TypeSpecification\n        },\n        structure [2] IMPLICIT SEQUENCE {\n            components [1] IMPLICIT SEQUENCE OF SEQUENCE {\n                componentType [1] TypeSpecification\n            }\n        }\n    }\n\n    TypeSpecification ::= CHOICE {\n        typeDescription TypeDescription\n    }\n\n    VariableSpecification ::= CHOICE {\n        variableDescription [2] IMPLICIT SEQUENCE {\n            typeSpecification TypeSpecification\n        }\n    }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] pub struct TypeDescriptionArray { # [rasn (tag (context , 2) , identifier = "elementType")] pub element_type : TypeSpecification , } impl TypeDescriptionArray { pub fn new (element_type : TypeSpecification) -> Self { Self { element_type } } } # [doc = " Anonymous SEQUENCE OF member "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (identifier = "SEQUENCE")] pub struct AnonymousTypeDescriptionStructureComponents { # [rasn (tag (context , 1) , identifier = "componentType")] pub component_type : TypeSpecification , } impl AnonymousTypeDescriptionStructureComponents { pub fn new (component_type : TypeSpecification) -> Self { Self { component_type } } } # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate)] pub struct TypeDescriptionStructureComponents (pub SequenceOf < AnonymousTypeDescriptionStructureComponents >) ; # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] pub struct TypeDescriptionStructure { # [rasn (tag (context , 1))] pub components : TypeDescriptionStructureComponents , } impl TypeDescriptionStructure { pub fn new (components : TypeDescriptionStructureComponents) -> Self { Self { components } } } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice)] pub enum TypeDescription { # [rasn (tag (context , 1))] array (TypeDescriptionArray) , # [rasn (tag (context , 2))] structure (TypeDescriptionStructure) , } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice , automatic_tags)] pub enum TypeSpecification { typeDescription (Box < TypeDescription >) , } # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (automatic_tags)] pub struct VariableSpecificationVariableDescription { # [rasn (identifier = "typeSpecification")] pub type_specification : TypeSpecification , } impl VariableSpecificationVariableDescription { pub fn new (type_specification : TypeSpecification) -> Self { Self { type_specification } } } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice)] pub enum VariableSpecification { # [rasn (tag (context , 2))] variableDescription (VariableSpecificationVariableDescription) , } }
