rasn-compiler-tests/tests/snapshots/structured_types__no_automatic_tags_on_choice_with_tagged_member.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        T ::= CHOICE { a INTEGER, b [1] BOOLEAN, c OCTET STRING }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice)] pub enum T { a (Integer) , # [rasn (tag (context , 1))] b (bool) , c (OctetString) , } }
