rasn-compiler-tests/tests/snapshots/structured_types__no_automatic_tags_on_sequence_with_tagged_member.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        T ::= SEQUENCE { a INTEGER, b [1] BOOLEAN, c OCTET STRING }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] pub struct T { pub a : Integer , # [rasn (tag (context , 1))] pub b : bool , pub c : OctetString , } impl T { pub fn new (a : Integer , b : bool , c : OctetString) -> Self { Self { a , b , c } } } }
