rasn-compiler-tests/tests/snapshots/structured_types__sequence_of_fixed_octet_with_default.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        MySeq ::= SEQUENCE {\n            items SEQUENCE OF OCTET STRING (SIZE(3)) DEFAULT {'AABBCC'H}\n        }\n    "
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod test_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Anonymous SEQUENCE OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "OCTET_STRING")]
    pub struct AnonymousMySeqItems(pub FixedOctetString<3usize>);
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MySeqItems(pub SequenceOf<AnonymousMySeqItems>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct MySeq {
        #[rasn(default = "my_seq_items_default")]
        pub items: MySeqItems,
    }
    impl MySeq {
        pub fn new(items: MySeqItems) -> Self {
            Self { items }
        }
    }
    impl std::default::Default for MySeq {
        fn default() -> Self {
            Self {
                items: my_seq_items_default(),
            }
        }
    }
    fn my_seq_items_default() -> MySeqItems {
        MySeqItems(alloc::vec![AnonymousMySeqItems(FixedOctetString::new([
            170u8, 187u8, 204u8
        ]))])
    }
}
