rasn-compiler-tests/tests/snapshots/structured_types__sequence_of_primitive_value.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: " value SEQUENCE OF INTEGER ::= { 1, 2, 3 }"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; pub static VALUE : LazyLock < Vec < Integer > > = LazyLock :: new (|| alloc :: vec ! [Integer :: from (1i128) , Integer :: from (2i128) , Integer :: from (3i128)]) ; }
