rasn-compiler-tests/tests/snapshots/structured_types__single_named_bit_default.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        Test::= SET {\n            parameters[0] IMPLICIT SEQUENCE {\n                        color [0] IMPLICIT Color DEFAULT {blue}\n            }\n        }\n\n        Color ::= BIT STRING {red(0), blue(1), yellow(2)}\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate)] pub struct Color (pub BitString) ; # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] pub struct TestParameters { # [rasn (tag (context , 0) , default = "test_parameters_color_default")] pub color : Color , } impl TestParameters { pub fn new (color : Color) -> Self { Self { color } } } impl std :: default :: Default for TestParameters { fn default () -> Self { Self { color : test_parameters_color_default () } } } fn test_parameters_color_default () -> Color { Color ([false , true , false] . into_iter () . collect ()) } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (set)] pub struct Test { # [rasn (tag (context , 0))] pub parameters : TestParameters , } impl Test { pub fn new (parameters : TestParameters) -> Self { Self { parameters } } } }
