rasn-compiler-tests/tests/snapshots/structured_types__tagged_prefix_type.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        A ::= SEQUENCE {\n            member SEQUENCE OF [0] INTEGER,\n        }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [doc = " Anonymous SEQUENCE OF member "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "INTEGER")] pub struct AnonymousAMember (pub Integer) ; # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate)] pub struct AMember (pub SequenceOf < AnonymousAMember >) ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (automatic_tags)] pub struct A { pub member : AMember , } impl A { pub fn new (member : AMember) -> Self { Self { member } } } }
